# ASR_ABTEST

./: .gitignore  build-mac.sh  build.sh  comparison_config.json  docker-compose.yml  languages.json  launch.sh  models.json  pyproject.toml  readme.md  readme.txt  requirements-mac.txt  requirements.txt
asr_abtest/: server.py
asr_abtest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
asr_abtest/benchmark/: __init__.py  batch_runner.py  evaluator.py  processor.py  results.py
asr_abtest/ui/: app.py
asr_abtest/ui/assets/: whisper-large-v3-turbo.json
asr_abtest/ui/results/: response_20250118_190839.json
asr_abtest/ui/static/: styles.css
asr_abtest/ui/templates/: benchmark_tab.html  index.html
benchmark_results/: benchmark_01c30314-776c-4ec2-9e47-ab6ef9503b38.json  benchmark_6e479a2c-a839-4c7c-a6d4-3618d2959e7a.json
data/: Feelingstream.json  Genesys.json  Untitled01Test recording.json
data/da/: hviskev2.json  nb-whisper-large-verbatim.json  transcript.json  whisper-small.json
docker/: asr-server.Dockerfile  ui-app.Dockerfile
example/: Feelingstream.json  recording.json
literature/: Synchronizing Audio and Text in Gradio_.txt
local_whisper/: __init__.py  server.py
local_whisper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
local_whisper/ui/: app.py
local_whisper/ui/assets/: Genesys.json
local_whisper/ui/results/: response_20250118_193240.json  response_20250118_193529.json  response_20250118_195334.json  response_20250118_195815.json  response_20250118_200053.json  (+3 more)
(+1 files in other folders)
