[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-whisper"
version = "0.1.0"
description = "Local Whisper transcription service with HTML UI"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "flask",
    "requests"
]

[project.scripts]
serve-whisper = "local_whisper.server:main"
whisper-ui = "local_whisper.ui.app:main"

[tool.setuptools]
packages = ["local_whisper"]