[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-abtest"
version = "0.1.0"
description = "ASR A/B Testing Framework with Web UI"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "flask",
    "requests"
]

[project.scripts]
serve-asr = "asr_abtest.server:main"
asr-abtest-ui = "asr_abtest.ui.app:main"

[tool.setuptools]
packages = ["asr_abtest"]
package-dir = {"asr_abtest" = "asr_abtest"}
package-data = {"asr_abtest" = ["static/*"]}